# LLMsFromScratch

./: .env.example  Cargo.toml  README.md
.cargo/: config.toml
examples/: U32toU16.rs  usizeToU32.rs
src/: downloader.rs  main.rs  tokenizer.rs  train.rs
