[package]
name = "LLMsFromScratch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16" }
dotenv = "0.15.0"
futures-util = "0.3.30"
indicatif = "0.17.8"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["stream"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-tar = "0.3.1"
xz2 = "0.1.7"
hashbrown = "0.14"